--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ header {
 
 #gallery {
     border: 2px solid #000000
-
+    margin-bottom 2rem;
+    
 }
 
 
@@ -57,4 +58,22 @@ header {
 #gallery figure {
     text-align: center;
 
+}
+
+/*literature*/
+#lit {
+border: 4px solid #000000;
+margin-bottom: 2rem;
+}
+
+#lit div {
+    padding:2rem;
+    max-width: 40rem;
+    margin: 0 auto;
+}
+
+
+#lit div p::first-letter {
+    float:left;
+    font-size:3em;
 }
