--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ iframe {
     max-width: 600px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #ddd;
+    border: 3px solid #000000;
     border-radius: 10px;
   }
   
