--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ iframe {
   }
 
   /* Set max-width for the form */
-.contact-form {
+#contact-form {
     max-width: 600px;
     margin: auto;
     padding: 20px;
@@ -199,14 +199,14 @@ iframe {
   }
   
   /* Style fieldset */
-  .contact-form fieldset {
+  #contact-form fieldset {
     border: none;
     padding: 0;
     margin: 0;
   }
   
   /* Style legend */
-  .contact-form legend {
+  #contact-form legend {
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 20px;
@@ -214,12 +214,12 @@ iframe {
   }
   
   /* Style form group */
-  .contact-form .form-group {
+  #contact-form .form-group {
     margin-bottom: 20px;
   }
   
   /* Style labels */
-  .contact-form label {
+  #contact-form label {
     display: block;
     font-size: 1.2rem;
     font-weight: bold;
@@ -228,9 +228,9 @@ iframe {
   }
   
   /* Style inputs */
-  .contact-form input,
-  .contact-form select,
-  .contact-form textarea {
+  #contact-form input,
+  #contact-form select,
+  #contact-form textarea {
     display: block;
     width: 100%;
     padding: 10px;
@@ -242,14 +242,14 @@ iframe {
   }
   
   /* Style radio group */
-  .contact-form .radio-group {
+  #contact-form .radio-group {
     display: flex;
     align-items: center;
     margin-top: 5px;
   }
   
   /* Style radio button labels */
-  .contact-form .radio-group label {
+  #contact-form .radio-group label {
     margin-right: 20px;
     font-size: 1.2rem;
     color: #333;
