--- a/css/nav.css
+++ b/css/nav.css
@@ -66,7 +66,7 @@ main{
 
 .navbar-links a {
     color:rgb(78, 78, 78);
-    background-color: #ffeace;
+    background-color: #fdead1;
     font-size: 1.5rem;
     padding: 1rem 1.25rem;
     display: inline-block;
@@ -103,5 +103,6 @@ such that no text wraps
 .navbar ul {
     display: flex;
     justify-content: space-between;
+
 }
 }
