--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header {
 #hero, footer {
     color:#F5DBBB ;
     border: 4px solid #705D48;
-    background-color: #F0A752;
+    background-color: #f0a651;
     text-align: center;
     padding:10px;
 }
