--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,20 @@ h1, h2, h3, h4 h5, h6 {
 }
 
 
+#logo img{
+    width: 500px;
+    min-height: 500px;
+}
+ 
+
 
 
 h2 {
     font-size: 20pt;
+}
+
+h3 {
+    font-size: 30pt;
 }
 
 header {
@@ -58,21 +68,39 @@ section #hobbies {
 /*Gallery*/
 
 #gallery {
-    border: 2px solid #000000
-    margin-bottom 2rem;
-    
-}
-
-
-#gallery img {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #000000;
+    padding: 10px;
+    margin-bottom: 2rem;
+  }
+  
+  #gallery img {
     max-width: 100%;
-
-}
-
-#gallery figure {
+    height: auto;
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
+  }
+  
+  #gallery img:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+  }
+  
+  #gallery figure {
     text-align: center;
-
-}
+    margin: 0;
+  }
+  
+  #gallery figcaption {
+    font-size: 16px;
+    margin-top: 5px;
+  }
+  
 
 /*literature*/
 #lit {
@@ -254,6 +282,11 @@ iframe {
     font-size: 1.2rem;
     color: #333;
   }
+
+  
+
+  
+  
 
   
  
